--- a/vignettes/Vignette_Planetary_Layers_Data_Preparation.Rmd
+++ b/vignettes/Vignette_Planetary_Layers_Data_Preparation.Rmd
@@ -19,7 +19,7 @@ First, we load the packages that we will need for completing this task.
 ```{r, message = FALSE, warning = FALSE, eval = FALSE}
 library(disperseR)
 library(data.table)
-library(tidyverse)
+library(terra)
 ```
 
 In case you have not yet created your project folder use the following command. 
@@ -33,7 +33,7 @@ First we specify the file names and the url where we download the data from. We 
 ```{r, eval = FALSE}
 directory <- hpbl_dir
 file <- file.path(directory, 'hpbl.mon.mean.nc')
-url <-'https://www.esrl.noaa.gov/psd/repository/entry/get/hpbl.mon.mean.nc?entryid=synth%3Ae570c8f9-ec09-4e89-93b4-babd5651e7a9%3AL05BUlIvTW9udGhsaWVzL21vbm9sZXZlbC9ocGJsLm1vbi5tZWFuLm5j'
+url <- 'https://psl.noaa.gov/repository/entry/get/hpbl.mon.mean.nc?entryid=synth%3Ae570c8f9-ec09-4e89-93b4-babd5651e7a9%3AL05BUlIvTW9udGhsaWVzL21vbm9sZXZlbC9ocGJsLm1vbi5tZWFuLm5j'
 ```
 
 If the file does not exist in the folder download it as follows:
@@ -48,15 +48,16 @@ if (!file.exists(file)){
 Before reading in, it is necessary to set the system time zone to UTC so that the dates are formatted correctly in the raster files.
 
 ```{r, eval = FALSE}
-Sys.setenv(TZ = 'UTC')
-hpbl_rasterin <- suppressWarnings(raster::brick(x = file, varname = 'hpbl'))
+old_tz <- Sys.getenv("TZ")
+Sys.setenv(TZ = "UTC")
+hpbl_rasterin <- suppressWarnings(terra::rast(file, subds = "hpbl"))
+Sys.setenv(TZ = old_tz)
 ```
 
 The following is done to fix error in the dataset. For more information please see [here]("https://stackoverflow.com/questions/56806894/raster-warning-message-in-cbindmi-vals-number-of-rows-of-result-is-not/56807318#56807318")
 
 ```{r, eval = FALSE}
-crs(hpbl_rasterin) <- "+proj=lcc +x_0=5632642.22547 +y_0=4612545.65137 +lat_0=50 +lon_0=-107 +lat_1=50"
+terra::crs(hpbl_rasterin) <- "+proj=lcc +x_0=5632642.22547 +y_0=4612545.65137 +lat_0=50 +lon_0=-107 +lat_1=50"
 ```
 
 Now `hpbl_rasterin` is prepared and ready to use.
-
