Fix path expansion, NA guard, and remove outdated vignettesHTML
- Add path.expand() for run_dir and met_dir to support ~ paths
- Add is.na() guard in start_day validation to prevent grepl() error
- Remove vignettesHTML directory (outdated; use vignettes/*.Rmd instead)
- Update vignette cross-references to point to Rmd sources
- Fix UDS Mapper link (remove quotes from URL)
- Clean up .Rbuildignore

--- a/README.Rmd
+++ b/README.Rmd
@@ -94,7 +94,7 @@ Use `get_data()` to download most inputs automatically.
 
 - Main vignette: `vignette("Vignette_DisperseR")`
 - Migration guide: `?migration_guide`
-- HTML vignettes: `vignettesHTML/`
+- Additional vignettes in `vignettes/` (render with `rmarkdown::render()`)
 
 ## System requirements
 
