Validate run_dir and fix broken vignette link
- Add run_dir validation: error on NULL/empty, auto-create if missing
- Fix broken link to removed Vignette_Zip_Code_Coordinate_Data_Preparation.html

--- a/vignettes/Vignette_Get_Data_One_by_One.Rmd
+++ b/vignettes/Vignette_Get_Data_One_by_One.Rmd
@@ -82,7 +82,7 @@ Let's see the first rows of the dataset.
 head(zipcodecoordinate)
 ```
 
-Click [here](vignettes/Vignette_Zip_Code_Coordinate_Data_Preparation.html) for an optional vignette on how we prepared these data. 
+See the `Vignette_Zip_Code_Coordinate_Data_Preparation` vignette for details on how we prepared these data. 
 
 ### The shape files
 
