--- a/vignettes/Vignette_Get_Data_One_by_One.Rmd
+++ b/vignettes/Vignette_Get_Data_One_by_One.Rmd
@@ -11,7 +11,8 @@ vignette: >
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  eval = FALSE
+  eval = FALSE,
+  purl = FALSE
 )
 ```
 
@@ -24,7 +25,8 @@ library(sf)
 
 In this vignette we will show you how you can use the `disperseR::get_data()` function to download/load your data one by one.
 
-In case you have not yet created your project folder use the following command. 
+In case you have not yet created your project folder, use the following
+command (it also caches directory paths for disperseR):
 
 ```{r}
 disperseR::create_dirs()
@@ -81,7 +83,7 @@ See the `Vignette_Zip_Code_Coordinate_Data_Preparation` vignette for details on 
 
 ### The shape files
 
-Equally important is the ZCTA shape file. Using the `get_data()` function and setting `data = "zctashapefile"` you can download and preprocess the file from the [US census website](http://www2.census.gov/geo/tiger/GENZ2017/shp/cb_2017_us_zcta510_500k.zip) automatically. If the file already exists in the correct folder, this function will preprocess it and load it into your R environment. See the `Vignette_ZCTA_Shapefile_Preparation` vignette for preprocessing details.
+Equally important is the ZCTA shape file. Using the `get_data()` function and setting `data = "zctashapefile"` you can download and preprocess the file from the [US census website](https://www2.census.gov/geo/tiger/GENZ2017/shp/cb_2017_us_zcta510_500k.zip) automatically. If the file already exists in the correct folder, this function will preprocess it and load it into your R environment. See the `Vignette_ZCTA_Shapefile_Preparation` vignette for preprocessing details.
 
 ```{r}
 zcta <- disperseR::get_data(data = "zctashapefile")
@@ -94,7 +96,7 @@ zcta
 
 ### Monthly mean planetary boundary layer heights 
 
-Another input that we need are the monthly mean boundary layer heights. We used the data available on the [ESRL website](https://www.esrl.noaa.gov/psd/repository/entry/get/hpbl.mon.mean.nc?entryid=synth%3Ae570c8f9-ec09-4e89-93b4-babd5651e7a9%3AL05BUlIvTW9udGhsaWVzL21vbm9sZXZlbC9ocGJsLm1vbi5tZWFuLm5j). Again, using the `get_data()` function and setting  `data = "pblheight"`. See the `Vignette_Planetary_Layers_Data_Preparation` vignette for more information on data preprocessing.
+Another input that we need are the monthly mean boundary layer heights. We used the data available on the [NOAA PSL website](https://psl.noaa.gov/repository/entry/get/hpbl.mon.mean.nc?entryid=synth%3Ae570c8f9-ec09-4e89-93b4-babd5651e7a9%3AL05BUlIvTW9udGhsaWVzL21vbm9sZXZlbC9ocGJsLm1vbi5tZWFuLm5j). Again, using the `get_data()` function and setting  `data = "pblheight"`. See the `Vignette_Planetary_Layers_Data_Preparation` vignette for more information on data preprocessing.
 
 
 ```{r}
